--- a/calculator/calculator.ui
+++ b/calculator/calculator.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>419</width>
+    <width>421</width>
     <height>250</height>
    </rect>
   </property>
@@ -35,31 +35,10 @@
     <property name="bottomMargin">
      <number>5</number>
     </property>
-    <item row="2" column="2">
-     <widget class="QPushButton" name="pbtn_9">
+    <item row="2" column="0">
+     <widget class="QPushButton" name="pbtn_7">
       <property name="text">
-       <string>9</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="3">
-     <widget class="QPushButton" name="pbtn_add">
-      <property name="text">
-       <string>+</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <widget class="QPushButton" name="pbtn_dot">
-      <property name="text">
-       <string>.</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="3">
-     <widget class="QPushButton" name="pbtn_sub">
-      <property name="text">
-       <string>-</string>
+       <string>7</string>
       </property>
      </widget>
     </item>
@@ -70,10 +49,17 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="2">
-     <widget class="QPushButton" name="pbtn_6">
+    <item row="3" column="1">
+     <widget class="QPushButton" name="pbtn_dot">
       <property name="text">
-       <string>6</string>
+       <string>.</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QPushButton" name="pbtn_1">
+      <property name="text">
+       <string>1</string>
       </property>
      </widget>
     </item>
@@ -81,6 +67,34 @@
      <widget class="QPushButton" name="pbtn_4">
       <property name="text">
        <string>4</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="3">
+     <widget class="QPushButton" name="pbtn_sub">
+      <property name="text">
+       <string>-</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="2">
+     <widget class="QPushButton" name="pbtn_9">
+      <property name="text">
+       <string>9</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="2">
+     <widget class="QPushButton" name="pbtn_6">
+      <property name="text">
+       <string>6</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="3">
+     <widget class="QPushButton" name="pbtn_mul">
+      <property name="text">
+       <string>*</string>
       </property>
      </widget>
     </item>
@@ -98,10 +112,10 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="1">
-     <widget class="QPushButton" name="pbtn_5">
+    <item row="0" column="3">
+     <widget class="QPushButton" name="pbtn_add">
       <property name="text">
-       <string>5</string>
+       <string>+</string>
       </property>
      </widget>
     </item>
@@ -109,6 +123,20 @@
      <widget class="QPushButton" name="pbtn_0">
       <property name="text">
        <string>0</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QPushButton" name="pbtn_5">
+      <property name="text">
+       <string>5</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QPushButton" name="pbtn_2">
+      <property name="text">
+       <string>2</string>
       </property>
      </widget>
     </item>
@@ -128,48 +156,7 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="0">
-     <widget class="QPushButton" name="pbtn_1">
-      <property name="text">
-       <string>1</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QPushButton" name="pbtn_2">
-      <property name="text">
-       <string>2</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QPushButton" name="pbtn_7">
-      <property name="text">
-       <string>7</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="3">
-     <widget class="QPushButton" name="pbtn_mul">
-      <property name="text">
-       <string>*</string>
-      </property>
-     </widget>
-    </item>
    </layout>
-  </widget>
-  <widget class="QPushButton" name="pbtn_equal">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>130</y>
-     <width>75</width>
-     <height>101</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>计算</string>
-   </property>
   </widget>
   <widget class="QTextEdit" name="txt_display">
    <property name="geometry">
@@ -180,6 +167,59 @@
      <height>121</height>
     </rect>
    </property>
+  </widget>
+  <widget class="QWidget" name="verticalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>120</y>
+     <width>85</width>
+     <height>121</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <property name="leftMargin">
+     <number>5</number>
+    </property>
+    <property name="topMargin">
+     <number>5</number>
+    </property>
+    <property name="rightMargin">
+     <number>5</number>
+    </property>
+    <property name="bottomMargin">
+     <number>5</number>
+    </property>
+    <item>
+     <widget class="QPushButton" name="pbtn_equal">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>计算</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pbtn_clear">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>清空</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
