--- a/userLogin/userLogin.ui
+++ b/userLogin/userLogin.ui
@@ -51,10 +51,10 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="ledt_userName"/>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit_2">
+      <widget class="QLineEdit" name="ledt_password">
        <property name="echoMode">
         <enum>QLineEdit::Password</enum>
        </property>
@@ -62,7 +62,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="pbtn_login">
     <property name="geometry">
      <rect>
       <x>70</x>
@@ -75,7 +75,7 @@
      <string>登录</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="pbtn_reset">
     <property name="geometry">
      <rect>
       <x>250</x>
